2002-10-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, Makefile.am: Updates to get things working a little
	more smoothly

	* symbols/symbols.tex, 7400a.eps, 7400b.eps: Fixed example to 
	actually be a correct symbol (first version had a duplicate net=
	pin value for both power and gnd).  Pointed out by Werner Hoch
	
	* symbols/Makefile.am, attributes.am: Further refined clean rules

	* Makefile and friends: Added a bunch of subdirs with other docs

	* gschem/ and gnetlist/: Added directory and appropriate txt files

2002-10-30 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in and friends: Started using automake and autoconf
	for the docs directory
