@@ -1,0 +1,78 @@
+<HTML>                                                                          <HEAD>
+<TITLE>gEDA/gaf Documentation</TITLE>
+</HEAD>
+
+<BODY>
+
+<P>
+<H1 ALIGN="CENTER">gEDA/gaf Documention</H1>
+<P>
+<BR>
+
+<H3>gschem User Guide</H3>
+Available Formats:
+<A HREF="./gschem/gschem.txt">txt</A> 
+
+<p>
+<br>
+
+<H3>gnetlist User Guide</H3>
+Available Formats:
+<A HREF="./gnetlist/gnetlist.txt">txt</A> 
+
+<p>
+<br>
+
+<H3>Master Attribute Document</H3>
+Available Formats:
+<A HREF="./attributes/index.html">HTML</A>
+<A HREF="./attributes/attributes.dvi">dvi</A>
+<A HREF="./attributes/attributes.ps">ps</A>
+<A HREF="./attributes/attributes.pdf">pdf</A>
+
+<p>
+<br>
+
+<H3>Symbol Creation Document</H3>
+Available Formats:
+<A HREF="./symbols/index.html">HTML</A>
+<A HREF="./symbols/symbols.dvi">dvi</A>
+<A HREF="./symbols/symbols.ps">ps</A>
+<A HREF="./symbols/symbols.pdf">pdf</A>
+
+<p>
+<br>
+
+<H3>net= attribute mini-HOWTO</H3>
+Available Formats:
+<A HREF="./netattrib/netattrib.txt">txt</A> </LI>
+
+<p>
+<br>
+
+<H3>File Formats</H3>
+Available Formats:
+<A HREF="./fileformats/fileformats.html">HTML</A> </LI>
+
+<p>
+<br>
+
+<H3>Hooks and Scheme Extension in gschem</H3>
+Available Formats:
+<A HREF="./hooks/hooks_and_scheme.txt">txt</A> </LI>
+
+<p>
+<br>
+
+<H3>How to Setup Keymapping in gschem</H3>
+Available Formats:
+<A HREF="./keymapping/keymapping.html">HTML</A></LI>
+
+<p>
+<br>
+<HR>
+Ales V. Hvezda<BR>
+<a href="mailto:ahvezda@.seul.org">ahvezda@geda.seul.org</a>
+
+</BODY>
+</HTML>
